--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   padding-top: 56px;
+    text-align: justify;
 }
 
 html {
@@ -54,7 +55,7 @@ html {
   border-radius: 5px;
   padding: 0px 10px;
 }
-
+/*
 #books {
   display: -ms-grid;
   display: grid;
@@ -94,6 +95,100 @@ html {
   width: 200px;
   height: 250px;
   padding: 1rem;
+} */
+
+
+.button {
+  border: 2px solid black;
+  height: 40px;
+  margin-top: 10px;
+  display: flex;
+  font-weight: bold;
+}
+
+.book-list{
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.category {
+  height: 8vh;
+}
+
+.details {
+  height: auto;
+  width: 60%;
+  margin-left: calc((100% - 60%)/2);
+}
+
+h2 {
+  font-size: 30px;
+  margin-top: 5px;
+  min-height: 15vh;
+  padding-top: 20px;
+}
+
+.list-group-item{
+   width:45%;
+   margin:15px;
+}
+
+li img{
+   width:220px;
+   height:300px;
+}
+
+.book-card img{
+  /* margin: 0 auto; */
+  width:auto;
+  height:20vw;
+  -webkit-box-shadow: 9px 3px 19px -8px rgba(0,0,0,0.47);
+  -moz-box-shadow: 9px 3px 19px -8px rgba(0,0,0,0.47);
+  box-shadow: 9px 3px 19px -8px rgba(0,0,0,0.47);
+}
+
+.book-card {
+  margin: 0 auto;
+  line-height: 20px;
+  display: block;
+  margin: 0 0 40px 0;
+  width: 100%;
+  height: auto;
+  text-align: center;
+}
+
+#books{
+  display:grid;
+  grid-gap: 20px;
+  grid-template-columns: auto auto;
+  flex-wrap:wrap;
+  margin-top: 20px;
+  border-top: 1px solid silver;
+  padding-top: 20px;
+}
+
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 8px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.press, .collapsible:hover {
+  background-color: #ccc;
+}
+
+.content {
+  padding: 8px 20px;
+  font-style: italic;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
 
 @media only screen and (max-width: 1050px) {
