--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,39 @@ html {
   padding: 1rem;
 } */
 
+#contact-form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+input[type=text], input[type=email] {
+  height: 30px;
+  margin-right: 20px;
+}
+
+input[type=text]:focus, input[type=email]:focus {
+  width: 25%;
+}
+
+label {
+  color: white;
+  padding-right: 8px;
+}
+
+.message {
+  height:110px;
+  width: 25%;
+}
+
+.submit {
+  border: 2px solid black;
+  width: 8%;
+  border-radius: 5px;
+  margin-left: 8px;
+}
+
 .links{
   text-align:center;
 }
@@ -117,7 +150,7 @@ html {
   text-align:center;
   font-weight: bold;
   width:100px;
- 
+
 }
 
 .book-list{
